# handler/auth/http/handler.go
@@ -6,7 +6,7 @@ import (
 	"net/http"
 	"time"
 
-	"github.com/labstack/echo/v4"
+	"github.com/gofiber/fiber/v2"
 	"github.com/sirupsen/logrus"
 
 	_config "sg-edts.com/edts-go-boilerplate/config"
@@ -22,16 +22,17 @@ type Handler struct {
 	CredentialUseCase _credential.Usecase
 }
 
+// @Tags Auth
 // @Summary Add Credential
 // @Description Add a new credential for user
 // @Accept  json
 // @Produce  json
-// @Param req body _model.AddCredentialRequest true "Add Credential Request"
+// @Param req body _model.AddCredentialRequest
 // @Router /auth [post]
-func (a *Handler) addCredential(c echo.Context) error {
+func (a *Handler) addCredential(c *fiber.Ctx) error {
 	var req _model.AddCredentialRequest
 
-	if err := c.Bind(&req); err != nil {
+	if err := c.BodyParser(&req); err != nil {
 		return _api.Failed(c, http.StatusBadRequest, _api.FromErrorCode(_message.IncorrectFormat))
 	}
 
@@ -39,21 +40,20 @@ func (a *Handler) addCredential(c echo.Context) error {
 		return _api.Failed(c, http.StatusBadRequest, err)
 	}
 
-	ctx := c.Request().Context()
+	ctx := c.UserContext()
 	if ctx == nil {
 		ctx = context.Background()
 	}
 
-	cCtx := c.(*_auth.ClaimsContext)
+	cCtx := c.Locals(_constant.ContextAuth).(*_auth.ClaimsContext)
 	claims, _, err, authStatus := cCtx.Claims()
 	if err != nil {
 		logrus.Error(err)
 		return _api.Failed(c, authStatus, err)
 	}
 
-	req.RequestInfo.IpNumber = c.RealIP()
-	req.RequestInfo.UserAgent = c.Request().UserAgent()
-	req.RequestInfo.Host = c.Request().Host
+	req.RequestInfo.IpNumber = c.IP()
+	req.RequestInfo.Host = c.Hostname()
 
 	data, err, msg := a.CredentialUseCase.AddCredential(ctx, _constant.ScopeMobile, claims, &req)
 	if err != nil {
@@ -68,10 +68,17 @@ func (a *Handler) addCredential(c echo.Context) error {
 	return _api.SuccessWithMessage(c, http.StatusOK, data, msg)
 }
 
-func (a *Handler) signIn(c echo.Context) error {
+// @Tags Auth
+// @Summary Sign in
+// @Description Sign in user
+// @Accept  json
+// @Produce  json
+// @Param req body _model.SignInRequest
+// @Router /auth [post]
+func (a *Handler) signIn(c *fiber.Ctx) error {
 	var req _model.SignInRequest
 
-	if err := c.Bind(&req); err != nil {
+	if err := c.BodyParser(&req); err != nil {
 		return _api.Failed(c, http.StatusBadRequest, _api.FromErrorCode(_message.IncorrectFormat))
 	}
 
@@ -79,16 +86,15 @@ func (a *Handler) signIn(c echo.Context) error {
 		return _api.Failed(c, http.StatusBadRequest, err)
 	}
 
-	ctx := c.Request().Context()
+	ctx := c.UserContext()
 	if ctx == nil {
 		ctx = context.Background()
 	}
 
-	cCtx := c.(*_auth.ClaimsContext)
+	cCtx := c.Locals(_constant.ContextAuth).(*_auth.ClaimsContext)
 
-	req.RequestInfo.IpNumber = c.RealIP()
-	req.RequestInfo.UserAgent = c.Request().UserAgent()
-	req.RequestInfo.Host = c.Request().Host
+	req.RequestInfo.IpNumber = c.IP()
+	req.RequestInfo.Host = c.Hostname()
 
 	data, err, msg := a.CredentialUseCase.SignIn(ctx, _constant.ScopeMobile, cCtx, &req)
 	if err != nil {
@@ -103,10 +109,10 @@ func (a *Handler) signIn(c echo.Context) error {
 	return _api.SuccessWithMessage(c, http.StatusOK, data, msg)
 }
 
-func (a *Handler) signOut(c echo.Context) error {
+func (a *Handler) signOut(c *fiber.Ctx) error {
 	var req _model.SignOutRequest
 
-	if err := c.Bind(&req); err != nil {
+	if err := c.BodyParser(&req); err != nil {
 		return _api.Failed(c, http.StatusBadRequest, _api.FromErrorCode(_message.IncorrectFormat))
 	}
 
@@ -114,21 +120,20 @@ func (a *Handler) signOut(c echo.Context) error {
 		return _api.Failed(c, http.StatusBadRequest, err)
 	}
 
-	ctx := c.Request().Context()
+	ctx := c.UserContext()
 	if ctx == nil {
 		ctx = context.Background()
 	}
 
-	cCtx := c.(*_auth.ClaimsContext)
+	cCtx := c.Locals(_constant.ContextAuth).(*_auth.ClaimsContext)
 	claims, _, err, authStatus := cCtx.Claims()
 	if err != nil {
 		logrus.Error(err)
 		return _api.Failed(c, authStatus, err)
 	}
 
-	req.RequestInfo.IpNumber = c.RealIP()
-	req.RequestInfo.UserAgent = c.Request().UserAgent()
-	req.RequestInfo.Host = c.Request().Host
+	req.RequestInfo.IpNumber = c.IP()
+	req.RequestInfo.Host = c.Hostname()
 
 	err, msg := a.CredentialUseCase.SignOut(ctx, _constant.ScopeMobile, claims.Username, &req)
 	if err != nil {
@@ -143,13 +148,13 @@ func (a *Handler) signOut(c echo.Context) error {
 	return _api.SuccessWithMessage(c, http.StatusOK, nil, msg)
 }
 
-func (a *Handler) refreshToken(c echo.Context) error {
-	ctx := c.Request().Context()
+func (a *Handler) refreshToken(c *fiber.Ctx) error {
+	ctx := c.UserContext()
 	if ctx == nil {
 		ctx = context.Background()
 	}
 
-	cCtx := c.(*_auth.ClaimsContext)
+	cCtx := c.Locals(_constant.ContextAuth).(*_auth.ClaimsContext)
 	_, _, err, authStatus := cCtx.Claims()
 	if err != nil {
 		logrus.Error(err)
@@ -169,13 +174,13 @@ func (a *Handler) refreshToken(c echo.Context) error {
 	return _api.SuccessWithMessage(c, http.StatusOK, data, msg)
 }
 
-func (a *Handler) checkTokenAvailability(c echo.Context) error {
-	ctx := c.Request().Context()
+func (a *Handler) checkTokenAvailability(c *fiber.Ctx) error {
+	ctx := c.UserContext()
 	if ctx == nil {
 		ctx = context.Background()
 	}
 
-	cCtx := c.(*_auth.ClaimsContext)
+	cCtx := c.Locals(_constant.ContextAuth).(*_auth.ClaimsContext)
 	claims, _, err, authStatus := cCtx.Claims()
 	if err != nil {
 		logrus.Error(err)
