# handler/healthcheck/http/handler.go
@@ -2,17 +2,21 @@ package http
 
 import (
 	"net/http"
-	
+
+	"github.com/gofiber/fiber/v2"
 	_api "sg-edts.com/edts-go-boilerplate/pkg/api"
-	"github.com/labstack/echo/v4"
 )
 
 type Handler struct {
 }
 
-// Healthcheck to check if the service is running
-func (a *Handler) healthcheck(c echo.Context) error {
+// @Tags Health Check
+// @Summary Health Check
+// @Description Health check endpoint
+// @Produce  json
+// @Router /healthcheck [get]
+func (a *Handler) healthcheck(c *fiber.Ctx) error {
 	msg := map[string]interface{}{"message": "OK"}
-	
+
 	return _api.SuccessWithMessage(c, http.StatusOK, nil, msg)
 }
