# model/system.go
@@ -1,7 +1,6 @@
 package model
 
 type RequestInfo struct {
-	UserAgent string
-	Host      string
-	IpNumber  string
+	Host     string
+	IpNumber string
 }
